change scss structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
           </nav>
         </header>
 
-        <div role="main" class="container">
+        <div id="content" class="container">
           {{ content }}
         </div>
       </div><!-- end #main -->
