--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -21,7 +21,10 @@ body > #wrap {
     text-align: center;
   }
 }
-
+// content
+#content{
+  padding-bottom: 20px;
+}
 // header
 #header {
   padding: 20px 0;
