--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -12,6 +12,10 @@ body {
   color: $darkGray;
 }
 
+time{
+  font-family: Georgia, "Microsoft YaHei", serif, Galdeano, "Hiragino Sans GB", sans-serif;
+}
+
 .container {
   margin: 0 auto;
   max-width: 740px;
