--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -23,7 +23,9 @@
     font-size: 22px;
     font-style: italic;
   }
-
+  .entry{
+    margin: 5px 0;
+  }
   .comments {
     margin-top: 10px;
   }
