--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -6,14 +6,15 @@
   -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
-  margin: 20px 0 20px 0;
+  margin: 5px 0 10px;
   overflow: scroll;
 }
 
 code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family: "Consolas",Monaco,"Courier New",Courier,monospace;
 }
 
+.highlight .lineno { font-style:italic; color: #666 } /* Line number */
 .highlight .c { color: #586E75 } /* Comment */
 .highlight .err { color: #93A1A1 } /* Error */
 .highlight .g { color: #93A1A1 } /* Generic */
