--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,13 +15,6 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
+$consolas:"Consolas",Monaco,"Courier New",Courier,monospace;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$georgia: Georgia, serif;
-
-// Mobile breakpoints
-@mixin mobile {
-  @media screen and (max-width: 640px) {
-    @content;
-  }
-}
