--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,14 +1,7 @@
-/**************/
-/* BASE RULES */
-/**************/
-
-html {
-  font-size: 100%;
-}
-
+/* site base */
 body {
   background: $white;
-  font: 18px/1.4 $helvetica;
+  font: 18px/1.6 $helvetica;
   color: $darkGray;
 }
 
