--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
     {% endif %}
-
+    <meta name="baidu-site-verification" content="lq6fYjpx1D" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css?_={{ site.time | date_to_xmlschema}}" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
   </head>
