--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -6,9 +6,9 @@ $code_border: 1px solid #ddd;
   border: $code_border;
   -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
+  box-shadow: 2px 2px 1px rgba(0,0,0,0.1);
   margin: 5px 0 10px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 code {
