--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,11 @@
+<div id="footer">
+    <div class="container">
+        <footer class="footer">
 {% if site.footer-links.email %}<a target="_blank" href="mailto:{{ site.footer-links.email }}"><i class="svg-icon email"></i></a>{% endif %}
 {% if site.footer-links.github %}<a target="_blank" href="http://github.com/{{ site.footer-links.github }}"><i class="svg-icon github"></i></a>{% endif %}
 {% if site.footer-links.linkedin %}<a target="_blank" href="http://linkedin.com/in/{{ site.footer-links.linkedin }}"><i class="svg-icon linkedin"></i></a>{% endif %}
 {% if site.footer-links.rss %}<a target="_blank" href="{{ site.baseurl }}/feed.xml"><i class="svg-icon rss"></i></a>{% endif %}
 {% if site.footer-links.stackoverflow %}<a target="_blank" href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="svg-icon stackoverflow"></i></a>{% endif %}
+        </footer>
+    </div>
+</div>
