--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,19 +35,7 @@
     <!-- lv1 wrap & footer -->
     <div id="wrap">
       <div id="main">
-        <header id="header" class="container clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
-
-          <nav>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
-        </header>
+        {% include header.html %}
 
         <div id="content" class="container">
           {{ content }}
@@ -55,13 +43,7 @@
       </div><!-- end #main -->
     </div>
 
-    <div id="footer">
-        <div class="container">
-          <footer class="footer">
-            {% include foot-links.html %}
-          </footer>
-        </div>
-      </div>
+    {% include footer.html %}
     {% include analytics.html %}
   </body>
 </html>
