--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,20 +4,20 @@ body > #wrap {
   height: auto;
   min-height: 100%;
 }
-#main {padding-bottom: 100px; }
+#main {padding-bottom: 80px; }
 
 
 #footer{
   position: relative;
-  margin-top: -100px;
-  height: 100px;
+  margin-top: -80px;
+  height: 80px;
 
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   color: #fff;
   background-color: $lightGray;
   footer {
-    padding: 25px 0;
+    padding: 15px 0;
     text-align: center;
   }
 }
@@ -30,20 +30,11 @@ body > #wrap {
   padding: 20px 0;
   border-bottom: 1px solid $lightGray;
 
-  @include mobile {
-    text-align: center;
-  }
   .site-avatar {
     float: left;
     width: 70px;
     height: 70px;
     margin-right: 15px;
-
-    @include mobile {
-      float: none;
-      display: block;
-      margin: 0 auto;
-    }
 
     img {
       border-radius: 5px;
@@ -53,11 +44,6 @@ body > #wrap {
   .site-info {
     float: left;
 
-    @include mobile {
-      float: none;
-      display: block;
-      margin: 0 auto;
-    }
     .site-name {
       margin: 0;
       color: $darkGray;
@@ -86,23 +72,40 @@ body > #wrap {
     font-size: 18px;
 
     @include mobile {
-      float: none;
-      margin-top: 9px;
+      margin-top: 5px;
       display: block;
       font-size: 16px;
     }
 
     a {
-      margin-left: 20px;
       color: $darkGray;
       text-align: right;
       font-weight: 300;
       letter-spacing: 1px;
+      padding: 15px 15px;
+      @include transition(all 0.4s);
+      &:hover{
+        background: $lightGray;
+      }
+      &.active,
+      &:active{
+        color: #fff;
+        background: $darkGray;
+      }
 
       @include mobile {
-        margin: 0 10px;
-        color: $blue;
+        display: block;
+        text-align: center;
+        padding: 5px 10px;
       }
     }
   }
+}
+
+
+.container {
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 0 20px;
+  width: 100%;
 }
