--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -13,6 +13,7 @@ $code_border: 1px solid #ddd;
 
 code {
   font-family: $consolas;
+  font-size: 16px;
   padding: 2px 4px;
   border-radius: 4px;
   border: $code_border;
