--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,7 +1,7 @@
 /* site base */
 body {
   background: $white;
-  font: 18px/1.6 $helvetica;
+  font:16px/1.6 $helveticaNeue;
   color: $darkGray;
 }
 
